Refactor error handling and dependency parsing logic
Improves error handling in OsvClient and DependencyParser by separating exception types and using more specific exception classes. Refactors VulnerabilityScannerService to extract batch response processing and introduces DependencyScanException. Cleans up and modularizes dependency parsing, adds a constant for Maven ecosystem, and registers a notification group in plugin.xml. Removes unused SapoIcons.java.